--- a/templates/ideal.html
+++ b/templates/ideal.html
@@ -13,6 +13,15 @@
             <option value="Buy">Buy</option>
             <option value="Sell">Sell</option>
             <option value="Hold">Hold</option>
+            <option value="Sell">Sell</option>
+            <option value="Hold">Hold</option>
+            <option value="Sell">Sell</option>
+            <option value="Hold">Hold</option>
+
+            <option value="Sell">Sell</option>
+            <option value="Hold">Hold</option>
+
+
         </select><br>
 
         <label for="details">Details:</label>
