--- a/templates/ideal.html
+++ b/templates/ideal.html
@@ -20,6 +20,11 @@
 
             <option value="Sell">Sell</option>
             <option value="Hold">Hold</option>
+            <option value="Sell">Sell</option>
+            <option value="Hold">Hold</option>
+
+            <option value="Sell">Sell</option>
+            <option value="Hold">Hold</option>
 
 
         </select><br>
