--- a/templates/ideal.html
+++ b/templates/ideal.html
@@ -26,6 +26,13 @@
             <option value="Sell">Sell</option>
             <option value="Hold">Hold</option>
 
+            <option value="Sell">Sell</option>
+            <option value="Hold">Hold</option>
+            <option value="Sell">Sell</option>
+            <option value="Hold">Hold</option>
+
+            <option value="Sell">Sell</option>
+            <option value="Hold">Hold</option>
 
         </select><br>
 
